# WebTable_Scraper_Cpp

./: README.md
src/: CMakeLists.txt  customScraper.cpp  customScraper.h  main.cpp  test.html
